--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
+    "rc-time-picker": "^3.7.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
