--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "change-case": "^4.1.2",
     "date-fns": "^2.23.0",
     "faker": "^5.5.3",
+    "file-saver": "^2.0.5",
     "firebase": "^8.9.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
@@ -73,6 +74,7 @@
     "simplebar": "^5.3.5",
     "simplebar-react": "^2.3.5",
     "web-vitals": "^2.1.0",
+    "xlsx": "^0.17.4",
     "yup": "^0.32.9"
   },
   "devDependencies": {
